--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typescript": "^3.6.4"
   },
   "dependencies": {
+    "bech32": "^1.1.3",
     "bs58check": "^2.1.2",
     "eip55": "^1.0.3",
     "safe-buffer": "^5.2.0"
