--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "typescript": "^3.6.4"
   },
   "dependencies": {
+    "@types/cashaddrjs": "^0.3.0",
     "bech32": "^1.1.3",
     "bs58check": "^2.1.2",
+    "cashaddrjs": "^0.3.8",
     "eip55": "^1.0.3",
     "safe-buffer": "^5.2.0"
   }
