--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
   },
   "dependencies": {
     "@types/cashaddrjs": "^0.3.0",
+    "base-x": "^3.0.7",
     "bech32": "^1.1.3",
     "bs58check": "^2.1.2",
     "cashaddrjs": "^0.3.8",
     "eip55": "^1.0.3",
+    "ripple-address-codec": "^4.0.0",
     "safe-buffer": "^5.2.0"
   }
 }
