--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ripple-address-codec": "^4.0.0",
     "rskjs-util": "^1.0.3",
     "safe-buffer": "^5.2.0",
-    "stellar-base": "^2.1.2"
+    "stellar-base": "^2.1.2",
+    "tronweb": "^2.8.0"
   }
 }
