--- a/package.json
+++ b/package.json
@@ -36,14 +36,16 @@
   },
   "dependencies": {
     "@types/cashaddrjs": "^0.3.0",
+    "@types/long": "^4.0.0",
     "bech32": "^1.1.3",
     "bs58check": "^2.1.2",
     "cashaddrjs": "^0.3.8",
+    "nem-sdk": "^1.6.7",
+    "ontology-ts-sdk": "^1.1.0",
     "ripple-address-codec": "^4.0.0",
     "rskjs-util": "^1.0.3",
     "safe-buffer": "^5.2.0",
     "stellar-base": "^2.1.2",
-    "tronweb": "^2.8.0",
-    "nem-sdk": "^1.6.7"
+    "tronweb": "^2.8.0"
   }
 }
