--- a/package.json
+++ b/package.json
@@ -39,11 +39,12 @@
     "bech32": "^1.1.3",
     "bs58check": "^2.1.2",
     "cashaddrjs": "^0.3.8",
+    "eosjs-ecc": "^4.0.7",
+    "nem-sdk": "^1.6.7",
     "ripple-address-codec": "^4.0.0",
     "rskjs-util": "^1.0.3",
     "safe-buffer": "^5.2.0",
     "stellar-base": "^2.1.2",
-    "tronweb": "^2.8.0",
-    "nem-sdk": "^1.6.7"
+    "tronweb": "^2.8.0"
   }
 }
