--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "typescript": "^3.6.4"
   },
   "dependencies": {
+    "@iota/core": "^1.0.0-beta.23",
+    "@iota/validators": "^1.0.0-beta.23",
+    "@types/bluebird": "^3.5.29",
     "@types/cashaddrjs": "^0.3.0",
     "bech32": "^1.1.3",
     "bs58check": "^2.1.2",
@@ -45,6 +48,7 @@
     "rskjs-util": "^1.0.3",
     "safe-buffer": "^5.2.0",
     "stellar-base": "^2.1.2",
-    "tronweb": "^2.8.0"
+    "tronweb": "^2.8.0",
+    "trytes": "^1.3.2"
   }
 }
