--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "bech32": "^1.1.3",
     "bs58": "^4.0.1",
+    "bs58grscheck": "^2.1.2",
     "crypto-addr-codec": "^0.1.7",
     "ripemd160": "^2.0.2"
   }
