--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "typescript": "^3.6.4"
   },
   "dependencies": {
+    "@polkadot/keyring": "^1.8.1",
     "@types/cashaddrjs": "^0.3.0",
+    "base-x": "^3.0.7",
     "bech32": "^1.1.3",
     "bs58check": "^2.1.2",
     "cashaddrjs": "^0.3.8",
