--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "tslint -p tsconfig.json",
     "prepare": "npm run build",
     "prepublishOnly": "npm run test",
+    "size": "browserify src/index.ts -p [tsify --noImplicitAny] | wc -c",
     "test": "jest --config jestconfig.json"
   },
   "files": [
@@ -39,6 +40,7 @@
     "@types/cashaddrjs": "^0.3.0",
     "base-x": "^3.0.7",
     "bech32": "^1.1.3",
+    "browserify": "^16.5.0",
     "bs58check": "^2.1.2",
     "cashaddrjs": "^0.3.8",
     "eosjs-ecc": "^4.0.7",
@@ -47,6 +49,7 @@
     "rskjs-util": "^1.0.3",
     "safe-buffer": "^5.2.0",
     "stellar-base": "^2.1.2",
-    "tronweb": "^2.8.0"
+    "tronweb": "^2.8.0",
+    "tsify": "^4.0.1"
   }
 }
