--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,7 @@
     "declaration": true,
     "outDir": "./lib",
     "strict": true, 
-    "esModuleInterop": true,
-    "importHelpers": true
+    "esModuleInterop": true
   },
   "include": ["src"],
   "exclude": ["node_modules", "**/__tests__/*"]
