--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
     "ts-jest": "^24.1.0",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.6.4"
+    "typescript": "^3.8.2"
   },
   "dependencies": {
-    "@polkadot/util-crypto": "^2.5.1",
     "@types/cashaddrjs": "^0.3.0",
     "bech32": "^1.1.3",
     "bs58check": "^2.1.2",
+	"blakejs": "^1.1.0",
     "cashaddrjs": "^0.3.8",
     "eosjs-ecc": "^4.0.7",
     "nem-sdk": "^1.6.7",
