--- a/package.json
+++ b/package.json
@@ -39,15 +39,13 @@
   },
   "dependencies": {
     "@types/cashaddrjs": "^0.3.0",
+    "base32.js": "^0.1.0",
     "bech32": "^1.1.3",
     "blakejs": "^1.1.0",
     "cashaddrjs": "^0.3.8",
-    "crypto-addr-codec": "^0.1.0",
-    "crypto-hashing": "^1.0.0",
-    "crypto-js": "^4.0.0",
-    "cryptomx": "^1.0.1",
-    "ripemd160": "^2.0.2",
-    "stellar-base": "^2.1.2",
+    "crc": "^3.8.0",
+    "crypto-addr-codec": "^0.1.1",
+    "lodash": "^4.17.15",
     "tsify": "^4.0.1"
   }
 }
