--- a/package.json
+++ b/package.json
@@ -38,13 +38,11 @@
     "typescript": "^3.8.2"
   },
   "dependencies": {
-    "@types/cashaddrjs": "^0.3.0",
     "base32.js": "^0.1.0",
     "bech32": "^1.1.3",
     "blakejs": "^1.1.0",
-    "cashaddrjs": "^0.3.8",
     "crc": "^3.8.0",
-    "crypto-addr-codec": "^0.1.1",
+    "crypto-addr-codec": "inspireme6/crypto-addr-serialize",
     "lodash": "^4.17.15",
     "tsify": "^4.0.1"
   }
