big huge max cleanup

--- a/package.json
+++ b/package.json
@@ -39,17 +39,18 @@
   },
   "dependencies": {
     "@types/cashaddrjs": "^0.3.0",
-    "bech32": "^1.1.3",
-    "bs58check": "^2.1.2",
-	"blakejs": "^1.1.0",
+    "assert": "^2.0.0",
+    "base32.js": "^0.1.0",
+    "bigi": "^1.4.2",
+    "blakejs": "^1.1.0",
     "cashaddrjs": "^0.3.8",
-    "eosjs-ecc": "^4.0.7",
-    "hextronweb": "^1.0.0",
+    "crypto-js": "^4.0.0",
+    "ecurve": "^1.0.6",
     "js-sha256": "^0.9.0",
-    "nem-sdk": "^1.6.7",
+    "ripemd160": "^2.0.2",
     "ripple-address-codec": "^4.0.0",
     "rskjs-util": "^1.0.3",
-    "stellar-base": "^2.1.2",
+    "stream": "0.0.2",
     "tsify": "^4.0.1",
     "tslib": "^1.11.0"
   }
