--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "bech32": "^1.1.3",
     "blakejs": "^1.1.0",
     "cashaddrjs": "^0.3.8",
-    "crypto-addr-codec": "0.1.3",
+    "crypto-addr-codec": "^0.1.4",
     "tsify": "^4.0.1"
   }
 }
