--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "blakejs": "^1.1.0",
     "cashaddrjs": "^0.3.8",
     "crypto-addr-codec": "^0.1.4",
-    "tsify": "^4.0.1"
+    "tsify": "^4.0.1",
+    "tslib": "^1.11.1"
   }
 }
