--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "outDir": "./lib",
     "strict": true,
     "esModuleInterop": true,
-	"allowJs": true
+    "allowJs": true,
+    "importHelpers": true
   },
   "include": ["src"],
   "exclude": ["node_modules", "**/__tests__/*"]
