--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "@ensdomains/address-encoder",
   "version": "0.1.3",
   "description": "Encodes and decodes address formats for various cryptocurrencies",
+  "source": "src/index.ts",
   "main": "lib/index.js",
+  "module": "lib/index.module.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "microbundle",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json",
     "prepare": "npm run build",
@@ -30,6 +32,7 @@
     "@types/node": "^12.7.12",
     "browserify": "^16.5.0",
     "jest": "^24.9.0",
+    "microbundle": "^0.12.0-next.8",
     "prettier": "^1.18.2",
     "ts-jest": "^24.1.0",
     "tslint": "^5.20.0",
@@ -40,8 +43,10 @@
     "@types/cashaddrjs": "^0.3.0",
     "bech32": "^1.1.3",
     "blakejs": "^1.1.0",
+    "bs58": "^4.0.1",
     "cashaddrjs": "^0.3.8",
     "crypto-addr-codec": "^0.1.4",
+    "sha.js": "^2.4.11",
     "tsify": "^4.0.1"
   }
 }
