--- a/package.json
+++ b/package.json
@@ -42,11 +42,9 @@
   "dependencies": {
     "@types/cashaddrjs": "^0.3.0",
     "bech32": "^1.1.3",
-    "blakejs": "^1.1.0",
     "bs58": "^4.0.1",
     "cashaddrjs": "^0.3.8",
     "crypto-addr-codec": "^0.1.4",
-    "sha.js": "^2.4.11",
-    "tsify": "^4.0.1"
+    "sha.js": "^2.4.11"
   }
 }
