--- a/package.json
+++ b/package.json
@@ -35,14 +35,13 @@
     "microbundle": "^0.12.0-next.8",
     "prettier": "^1.18.2",
     "ts-jest": "^24.1.0",
+    "tsify": "^4.0.1",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.8.2"
   },
   "dependencies": {
     "bech32": "^1.1.3",
-    "bs58": "^4.0.1",
-    "crypto-addr-codec": "^0.1.5",
-    "sha.js": "^2.4.11"
+    "crypto-addr-codec": "^0.1.5"
   }
 }
