--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "tslint -p tsconfig.json",
     "prepare": "npm run build",
     "prepublishOnly": "npm run test",
-    "size": "browserify src/index.ts -p [tsify --noImplicitAny] | wc -c",
+    "size": "browserify lib/index.js | wc -c",
     "test": "jest --config jestconfig.json"
   },
   "files": [
@@ -35,7 +35,6 @@
     "microbundle": "^0.12.0-next.8",
     "prettier": "^1.18.2",
     "ts-jest": "^24.1.0",
-    "tsify": "^4.0.1",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.8.2"
