--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "typescript": "^3.8.2"
   },
   "dependencies": {
+    "@xmr-core/xmr-b58": "^0.0.8",
     "bech32": "^1.1.3",
     "crypto-addr-codec": "^0.1.7"
   }
