--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "license": "BSD",
   "devDependencies": {
     "@types/jest": "^24.0.18",
+    "@types/js-base64": "^3.0.0",
     "@types/node": "^12.7.12",
     "browserify": "^16.5.0",
     "jest": "^24.9.0",
@@ -41,6 +42,7 @@
   },
   "dependencies": {
     "bech32": "^1.1.3",
-    "crypto-addr-codec": "^0.1.7"
+    "crypto-addr-codec": "^0.1.7",
+    "js-base64": "^3.4.5"
   }
 }
