--- a/package.json
+++ b/package.json
@@ -35,13 +35,16 @@
     "microbundle": "^0.12.0-next.8",
     "prettier": "^1.18.2",
     "ts-jest": "^24.1.0",
+    "ts-node": "^9.0.0",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.8.2"
+    "typescript": "^3.9.7"
   },
   "dependencies": {
     "bech32": "^1.1.3",
+    "bs58": "^4.0.1",
     "crypto-addr-codec": "^0.1.7",
-    "eztz-lib": "^0.1.2"
+    "eztz-lib": "^0.1.2",
+    "sha3": "^2.1.3"
   }
 }
