--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
   },
   "dependencies": {
     "bech32": "^1.1.3",
-    "crypto-addr-codec": "^0.1.7",
-    "eztz-lib": "^0.1.2"
+    "crypto-addr-codec": "^0.1.7"
   }
 }
