--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
   },
   "dependencies": {
     "bech32": "^1.1.3",
-    "crypto-addr-codec": "^0.1.7"
+    "bs58": "^4.0.1",
+    "crypto-addr-codec": "^0.1.7",
+    "ripemd160": "^2.0.2"
   }
 }
