--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "typescript": "^3.8.2"
   },
   "dependencies": {
+    "@glif/filecoin-address": "^1.0.0-beta.1",
     "bech32": "^1.1.3",
     "bs58": "^4.0.1",
     "crypto-addr-codec": "^0.1.7",
