--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "bech32": "^1.1.3",
     "blakejs": "^1.1.0",
     "bn.js": "^4.11.8",
+    "blake-hash": "^2.0.0",
     "bs58": "^4.0.1",
     "crypto-addr-codec": "^0.1.7",
     "js-sha512": "^0.8.0",
