--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
   },
   "dependencies": {
     "@glif/filecoin-address": "^1.0.0-beta.1",
+    "base32-decode": "^1.0.0",
+    "base32-encode": "^1.1.1",
     "bech32": "^1.1.3",
     "blakejs": "^1.1.0",
     "bs58": "^4.0.1",
