Support protocol 0 , add more test case, and tidy up code

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "blakejs": "^1.1.0",
     "bs58": "^4.0.1",
     "crypto-addr-codec": "^0.1.7",
+    "leb128": "0.0.5",
     "nano-base32": "^1.0.1",
     "ripemd160": "^2.0.2"
   }
