--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@types/node": "^12.7.12",
     "browserify": "^16.5.0",
     "jest": "^26.4.2",
-    "microbundle": "^0.12.0-next.8",
+    "microbundle": "^0.12.4",
     "prettier": "^1.18.2",
     "ts-jest": "^26.4.1",
     "tslint": "^5.20.0",
