--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
   },
   "dependencies": {
     "bech32": "^1.1.3",
+    "blakejs": "^1.1.0",
     "bs58": "^4.0.1",
     "crypto-addr-codec": "^0.1.7",
-    "ripemd160": "^2.0.2"
+    "ripemd160": "^2.0.2",
+    "sha3": "^2.1.3"
   }
 }
