--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "module": "lib/index.module.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "build": "microbundle --external crypto",
+    "build": "microbundle",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json",
     "prepare": "npm run build",
@@ -45,6 +45,7 @@
     "bn.js": "^4.11.8",
     "bs58": "^4.0.1",
     "crypto-addr-codec": "^0.1.7",
+    "js-sha512": "^0.8.0",
     "nano-base32": "^1.0.1",
     "ripemd160": "^2.0.2"
   }
