--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "crypto-addr-codec": "^0.1.7",
     "js-sha512": "^0.8.0",
     "nano-base32": "^1.0.1",
-    "sha3": "^2.1.3"
+    "ripemd160": "^2.0.2",
+    "sha3": "^2.1.3",
     "thor-devkit": "^1.3.3"
   }
 }
