Add support for GXC address encoding and deconding functionalities (#238)
* Add support for GXC address encoding and deconding functionalities

* Use the correct coin type

* Move import ripemd160 to the top

* Fix merge conflict

* Remove crypto module

* Clean up package.json

* Clean up code

* Fix eslint failure

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.12",
+    "@types/ripemd160": "^2.0.0",
     "browserify": "^16.5.0",
     "jest": "^26.4.2",
     "microbundle": "^0.12.4",
