--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "bn.js": "^4.11.8",
     "bs58": "^4.0.1",
     "crypto-addr-codec": "^0.1.7",
+    "fast-sha256": "^1.3.0",
     "js-sha512": "^0.8.0",
     "nano-base32": "^1.0.1",
     "ripemd160": "^2.0.2",
