--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "js-sha512": "^0.8.0",
     "nano-base32": "^1.0.1",
     "sha3": "^2.1.3",
-    "ripemd160": "^2.0.2",
-    "thor-devkit": "^1.3.2",
+    "ripemd160": "^2.0.2"
   }
 }
