--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "crypto-addr-codec": "^0.1.7",
     "js-sha512": "^0.8.0",
     "nano-base32": "^1.0.1",
+    "ripemd160": "^2.0.2",
     "sha3": "^2.1.3"
   }
 }
