Add support for STX (Blockstack) address

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "blakejs": "^1.1.0",
     "bn.js": "^4.11.8",
     "bs58": "^4.0.1",
+    "cross-sha256": "^1.1.2",
     "crypto-addr-codec": "^0.1.7",
     "js-sha512": "^0.8.0",
     "nano-base32": "^1.0.1",
