Replace crc dependency with js-crc

--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
   "author": "Nick Johnson <nick@ens.domains>",
   "license": "BSD",
   "devDependencies": {
-    "@types/crc": "^3.4.0",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.12",
     "@types/ripemd160": "^2.0.0",
@@ -46,8 +45,8 @@
     "blakejs": "^1.1.0",
     "bn.js": "^4.11.8",
     "bs58": "^4.0.1",
-    "crc": "^3.8.0",
     "crypto-addr-codec": "^0.1.7",
+    "js-crc": "^0.2.0",
     "js-sha512": "^0.8.0",
     "nano-base32": "^1.0.1",
     "ripemd160": "^2.0.2",
