--- a/package.json
+++ b/package.json
@@ -52,7 +52,6 @@
     "js-sha512": "^0.8.0",
     "nano-base32": "^1.0.1",
     "ripemd160": "^2.0.2",
-    "sha3": "^2.1.3",
-    "starknet": "^4.9.0"
+    "sha3": "^2.1.3"
   }
 }
