--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ensdomains/address-encoder",
-  "version": "0.2.18",
+  "name": "@ace_domains/address-encoder",
+  "version": "0.1.0",
   "description": "Encodes and decodes address formats for various cryptocurrencies",
   "source": "src/index.ts",
   "main": "lib/index.js",
@@ -53,5 +53,8 @@
     "nano-base32": "^1.0.1",
     "ripemd160": "^2.0.2",
     "sha3": "^2.1.3"
+  },
+  "publishConfig": {
+    "@ace_domains:registry": "https://registry.npmjs.org"
   }
 }
