--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "typescript": "^3.8.2"
   },
   "dependencies": {
+    "@noble/hashes": "^1.3.2",
     "bech32": "^2.0.0",
-    "blakejs": "^1.1.0",
     "bn.js": "^4.11.8",
     "bs58": "^4.0.1",
     "crypto-addr-codec": "^0.1.7",
