--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "bs58": "^4.0.1",
     "crypto-addr-codec": "^0.1.7",
     "js-crc": "^0.2.0",
-    "nano-base32": "^1.0.1",
-    "sha3": "^2.1.3"
+    "nano-base32": "^1.0.1"
   }
 }
