--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@noble/curves": "^1.2.0",
     "@noble/hashes": "^1.3.2",
     "bech32": "^2.0.0",
     "uint8arrays": "^4.0.6"
