--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@noble/curves": "^1.2.0",
     "@noble/hashes": "^1.3.2",
+    "@scure/base": "^1.1.3",
     "bech32": "^2.0.0",
     "uint8arrays": "^4.0.6"
   }
