--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,4 +11,4 @@ jobs:
         with:
           bun-version: latest
       - run: bun install
-      - run: bun test src/coin
+      - run: bun test
