--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.2",
-    "bun-types": "latest",
+    "bun-types": "1.0.22",
     "fs-extra": "^11.1.1",
     "mitata": "^0.1.6",
     "typescript": "^5.1.6"
@@ -80,7 +80,6 @@
   "dependencies": {
     "@noble/curves": "^1.2.0",
     "@noble/hashes": "^1.3.2",
-    "@scure/base": "^1.1.3",
-    "bech32": "^2.0.0"
+    "@scure/base": "^1.1.5"
   }
 }
