--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "bun-types": "1.0.22",
     "fs-extra": "^11.1.1",
     "mitata": "^0.1.6",
+    "ts-arithmetic": "^0.1.1",
     "typescript": "^5.1.6"
   },
   "dependencies": {
