--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "fs-extra": "^11.1.1",
     "mitata": "^0.1.6",
     "ts-arithmetic": "^0.1.1",
+    "ts-markdown": "^1.0.0",
     "typescript": "^5.1.6"
   },
   "dependencies": {
